0.6 + API update for token refresh + API doc update + SQL file finished
Added API for token refresh, added test functionalities to Swagger API doc which will be part of the site when finished.

Added new questions to db, over 100 questions are ready to be used in the app. SQL file for testing purposes was updated and can be found in repository
